# solana-rbac-onchain

./: Anchor.toml  README.md  package.json  tsconfig.json
client/: cli.ts  rbac-client.ts
programs/rbac/: Cargo.toml
programs/rbac/src/: errors.rs  events.rs  lib.rs  state.rs
programs/rbac/src/instructions/: check_permission.rs  create_role.rs  grant_role.rs  initialize_resource.rs  mod.rs  revoke_role.rs  transfer_admin.rs
tests/: rbac.ts
