[package]
name = "rbac"
version = "0.1.0"
description = "On-chain RBAC system built with Anchor on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rbac"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
